--- a/app/src/main/res/layout/activity_chats.xml
+++ b/app/src/main/res/layout/activity_chats.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,21 +7,23 @@
     android:orientation="vertical">
 
     <Button
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="buuttonClick"
         android:text="press me!" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/newChatBtn"
+        android:id="@+id/new_chat_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_gravity="bottom|right"
+        android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:clickable="true"
+        android:focusable="true"
         android:onClick="newChat"
         app:srcCompat="@android:drawable/stat_notify_chat" />
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
