--- a/app/src/main/res/layout/activity_chats.xml
+++ b/app/src/main/res/layout/activity_chats.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <Button
+    <ListView
+        android:id="@+id/chats_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="buuttonClick"
-        android:text="press me!" />
+        android:layout_height="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/newChatBtn"
@@ -24,4 +22,4 @@
         android:onClick="newChat"
         app:srcCompat="@android:drawable/stat_notify_chat" />
 
-</LinearLayout>
+</RelativeLayout>
